Sync the translation models with tailor